Fixed NullPointerException in JSONUtils processing attributes